# WannaEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Core/: CMakeLists.txt
Core/Private/: WannaApplication.cpp
Core/Public/: WannaApplication.h
Platform/: CMakeLists.txt
Platform/Private/: WannaGeomtryUtil.cpp  WannaGlfwWindow.cpp  WannaGraphicContext.cpp  WannaLog.cpp  WannaVulkanBuffer.cpp  WannaVulkanCommandBuffer.cpp  WannaVulkanContext.cpp  WannaVulkanDevice.cpp  WannaVulkanFrameBuffer.cpp  WannaVulkanImage.cpp  WannaVulkanImageView.cpp  WannaVulkanPipeline.cpp  WannaVulkanQueue.cpp  WannaVulkanRenderPass.cpp  WannaVulkanSwapChain.cpp  WannaWindow.cpp
Platform/Public/: WannaEngine.h  WannaGeometryUtil.h  WannaGlfwWindow.h  WannaGraphicContext.h  WannaLog.h  WannaVulkanBuffer.h  WannaVulkanCommandBuffer.h  WannaVulkanCommon.h  WannaVulkanContext.h  WannaVulkanDevice.h  WannaVulkanFileUtil.h  WannaVulkanFrameBuffer.h  WannaVulkanImage.h  WannaVulkanImageView.h  WannaVulkanPipeline.h  WannaVulkanQueue.h  WannaVulkanRenderPass.h  WannaVulkanSwapChain.h  WannaWindow.h
Resource/: shader.frag  shader.vert
Resource/Shader/: shader.frag.spv  shader.vert.spv
Sample/: CMakeLists.txt
Sample/SandBox/: CMakeLists.txt  Main.cpp
cmake/: SPIR-V.cmake
